integrates/deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-master
  namespace: production
  annotations:
    kubernetes.io/change-cause: "New deployment version of async Integrates on __DATE__"
spec:
  replicas: 10
  selector:
    matchLabels:
      app: integrates-master
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
  template:
    metadata:
      labels:
        app: integrates-master
    spec:
      nodeSelector:
        worker_group: production
      containers:
        - name: integrates1
          image: registry.gitlab.com/fluidattacks/product/app:master
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - production
            - http/production/fluidintegrates.asgi:APP/fluidintegrates.asgi.IntegratesWorker/5/0.0.0.0/8000/127.0.0.1
          resources:
            requests:
              cpu: 1500m
              memory: 4Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          ports:
            - containerPort: 8000
          readinessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_readiness
                - integrates-prod
                - http://localhost:8000
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
          livenessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_liveness
                - integrates-prod
                - http://localhost:8000
                - https://integrates.fluidattacks.com
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
        - name: integrates2
          image: registry.gitlab.com/fluidattacks/product/app:master
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - production
            - http/production/backend_new.app.app:APP/backend_new.settings.uvicorn.IntegratesWorker/5/0.0.0.0/8001/*
          resources:
            requests:
              cpu: 1500m
              memory: 4Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_readiness
                - integrates-prod
                - http://localhost:8001/new/
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
          livenessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_liveness
                - integrates-prod
                - http://localhost:8001/new/
                - https://integrates.fluidattacks.com/new/
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
