integrates/deploy/production/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates2-master
  namespace: production
  annotations:
    kubernetes.io/change-cause: "New deployment version of async Integrates on __DATE__"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrates2-master
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: integrates2-master
    spec:
      nodeSelector:
        worker_group: xlarge
      containers:
      - name: integrates2
        image: registry.gitlab.com/fluidattacks/product/app2:master
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
          - containerPort: 8080
        readinessProbe:
          exec:
            command: [bash, deploy/production/integrates2-probes.sh, run_readiness_probe]
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 40
        livenessProbe:
          exec:
            command: [bash, deploy/production/integrates2-probes.sh, run_liveness_probe]
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 40
