integrates/deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrates-master
  namespace: production
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: integrates-master
