integrates/deploy/production/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrates2-master
  namespace: production
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: integrates2-master
